// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PopoverEducational does not render when the anchor is null 1`] = `<div />`;

exports[`PopoverEducational renders correctly 1`] = `
<div>
  <div
    class="box"
  >
    <div>
      <div
        class="container rounding4 contents maxDimensions minDimensions"
        style="position: absolute; left: 0px; top: 0px; visibility: visible; transform: translate(0px, 0px);"
        tabindex="-1"
      >
        <div
          class="caret caretEducation"
          style="top: 100%;"
        >
          <svg
            height="4"
            width="12"
          >
            <path
              d="M12 0c-.694 0-1.36.278-1.847.773L7.625 3.34c-.807.819-2.188.885-3.084.148a2.098 2.098 0 01-.163-.148L1.853.775A2.6 2.6 0 000 0"
              stroke="rgb(0 0 0 / 0.02)"
            />
          </svg>
        </div>
        <div
          aria-label="text"
          class="border rounding4 innerContents maxDimensions minDimensions education"
          role="dialog"
          style="max-width: 230px;"
        >
          <div
            class="box paddingX4 paddingY4"
            tabindex="0"
          >
            <div
              class="Flex rowGap3 columnGap3 xsDirectionColumn"
            >
              <div
                class="FlexItem"
              >
                <div
                  class="Text fontSize300 light alignStart breakWord fontWeightNormal"
                >
                  text
                </div>
              </div>
              <div
                class="FlexItem flexGrow selfEnd"
              >
                <button
                  class="button hideOutline inline accessibilityOutline parentButton"
                  tabindex="0"
                  type="button"
                >
                  <div
                    class="button hideOutline inline accessibilityOutline tapTransition md white enabled childrenDiv"
                  >
                    <div
                      class="Text fontSize300 default alignCenter fontWeightSemiBold"
                    >
                      next
                    </div>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PopoverEducational renders correctly with custom children 1`] = `
<div>
  <div
    class="box"
  >
    <div>
      <div
        class="container rounding4 contents maxDimensions minDimensions"
        style="position: absolute; left: 0px; top: 0px; visibility: visible; transform: translate(0px, 0px);"
        tabindex="-1"
      >
        <div
          class="caret caretEducation"
          style="top: 100%;"
        >
          <svg
            height="4"
            width="12"
          >
            <path
              d="M12 0c-.694 0-1.36.278-1.847.773L7.625 3.34c-.807.819-2.188.885-3.084.148a2.098 2.098 0 01-.163-.148L1.853.775A2.6 2.6 0 000 0"
              stroke="rgb(0 0 0 / 0.02)"
            />
          </svg>
        </div>
        <div
          aria-label="text"
          class="border rounding4 innerContents maxDimensions minDimensions education"
          role="tooltip"
          style="max-width: 230px;"
        >
          <div
            class="Text fontSize300 default alignStart breakWord fontWeightNormal"
          >
            Custom children
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
